# rust-backend-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  develop.env  docker-compose-coverage.yml  docker-compose-tests.yml  docker-compose.yml  dockerignore  healthcheck.sh
.github/: dependabot.yml
.github/workflows/: statis_analysis.yml
src/: config.rs  db.rs  error_handler.rs  lib.rs  main.rs  metrics.rs  model.rs  routes.rs  server_state.rs
tests/: integration_tests.rs
